# dao-ai

./: .gitignore  .pre-commit-config.yaml  .todos.md  01_ingest-and-transform.py  02_provision-vector-search.py  02_provision_vector_search.py  03_generate_evaluation_data.py  04_unity-catalog-tools.py  04_unity_catalog_tools.py  05_agent_as_code_driver.py  05a_run_examples.py  06_evaluate_agent.py  07_deploy_agent.py  404.html  CONTRIBUTING.md  Makefile  README.md  databricks.yaml  enable_cdf.py  index.html  mkdocs.yml  model_config.yaml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  sitemap.xml  test_shared_postgres_pools.py
config/: model_config.yaml  model_config_dais.yaml  model_config_genie.yaml  model_config_genie_and_vector_search.yaml  model_config_postgres.yaml  model_config_supervisor.yaml  model_config_swarm.yaml
docs/: index.md
notebooks/: 01_ingest_and_transform.py  02_provision_vector_search.py  03_generate_evaluation_data.py  (+13 more)
streamlit_store_app/: .gitignore  Makefile  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  start.sh  test_homepage.py
streamlit_store_app/components/: __init__.py  chat.py  homepage.py  metrics.py  navigation.py  styles.py
streamlit_store_app/pages/: __init__.py  daily_operations.py  inventory.py  my_schedule.py  my_tasks.py  orders.py  products_promotions.py  staff.py  team_insights.py
streamlit_store_app/static/css/: style.css
streamlit_store_app/tests/: test_calculations.py
streamlit_store_app/utils/: config.py  database.py  model_serving.py  store_context.py
(+154 files in other folders)
